@@ -1,5 +1,13 @@
 Revision history for libev, a high-performance and full-featured event loop.
 
+TODO: ev_loop_prefork hint?
+
+	- change the default periodic reschedule function to hopefully be more
+          exact and correct.
+        - document reasonable ranges for interval and offset.
+        - do not rely on -lm anymore: use it when available but use our
+          own floor () if it is missing. This should make it easier to embed.
+
 4.04 Wed Feb 16 09:01:51 CET 2011
 	- fix two problems in the native win32 backend, where reuse of fd's
           with different underlying handles caused handles not to be removed
